minor PlayerWidget grid gap fix

--- a/Upnp.Control.Web/ClientApp/src/styles/_player.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_player.scss
@@ -80,7 +80,7 @@
 
     @media (min-width: 576px) and (min-height: 576px) {
         grid: "prog prog prog prog prog prog prog prog prog" auto "prev play next . art title . mode vol" auto / auto auto auto 1fr auto minmax(0, auto) 1fr auto auto;
-        gap: 0 0;
+        gap: map-get($spacers, 1) 0;
 
         .art {
             max-width: 1em;
